fixed the fonts and screen alignment.

--- a/7-step-Questionnaire/style.css
+++ b/7-step-Questionnaire/style.css
@@ -1,5 +1,19 @@
+
+input[type=checkbox]::before {
+  position: absolute;
+  content: '\2713';
+  width: 12px;
+  height: 12px;
+  color: #ffff;
+  transform: scale(0);
+  transition: 0.3s all ease-in-out;
+}
+input[type=checkbox]:checked::before {
+  transform: scale(.8) translateY(-4px);
+}
+ 
  /* Custom style for the range slider thumb */
- #labels-range-input::-webkit-slider-thumb {
+ input[type=range]::-webkit-slider-thumb {
     background-color: white; /* Change thumb color to green */
     border: 1px solid var(--gray-200, #E5E7EB);
     box-shadow: 0px 1px 2px 0px #00000014;
@@ -11,7 +25,7 @@
     appearance: none;
 }
 
-#labels-range-input::-moz-range-thumb {
+input[type=range]::-moz-range-thumb {
     background-color: white; /* Change thumb color to green for Firefox */
     border: 1px solid var(--gray-200, #E5E7EB);
     box-shadow: 0px 1px 2px 0px #00000014;
